# ndnm

./: .gitignore  .ndnm-pids.txt  CLAUDE.md  QUICKSTART.md  STATUS.md  start-all.ps1  start.ps1  stop-all.ps1  test-ws.ps1  test.ps1  test_system.md
.claude/: settings.local.json
ndnm-argos/: .gitignore  DOCUMENTACAO.md  index.html  package.json  tsconfig.json  vite.config.ts
ndnm-argos/.claude/: settings.local.json
ndnm-argos/src/: App.tsx  main.tsx  style.scss
ndnm-argos/src/components/: FileBrowser.tsx  HackerModal.tsx  LeftPanel.tsx  NodeCatalog.tsx  PinnedPlayButtons.tsx  SelectorControl.tsx  WebSocketStatus.tsx
ndnm-argos/src/flow/: FlowCanvas.tsx  FlowController.tsx  FlowInner.tsx
ndnm-argos/src/hooks/: useFlowInteraction.ts  useFlowStateSync.ts  useNodeConfig.ts  useNodePalette.ts  usePaneClickCombo.ts  usePinnedNodes.ts  useWorkflowExecution.ts  useWorkspacePersistence.ts  useWsClient.ts
ndnm-argos/src/nodes/: BaseIONode.tsx  FsBrowserNode.tsx  PlayNode.tsx  registry.ts
ndnm-argos/src/styles/: hacker.scss
ndnm-argos/src/utils/: api.ts  flowUtils.ts  graphConverter.ts  logReporter.ts  logger.ts  wsUrl.ts
ndnm-backend/ndnm-brazil/: Cargo.toml
ndnm-backend/ndnm-brazil/src/: main.rs  websocket.rs
ndnm-backend/ndnm-exdoida/: Cargo.toml
ndnm-backend/ndnm-exdoida/src/: main.rs  storage.rs  udp_server.rs
ndnm-backend/ndnm-hermes/: Cargo.toml
ndnm-backend/ndnm-hermes/src/: discovery.rs  main.rs  orchestrator.rs  registry.rs  workspace.rs
ndnm-backend/ndnm-libs/: Cargo.toml
ndnm-backend/ndnm-libs/examples/: test_load_config.rs
ndnm-backend/ndnm-libs/src/: config.rs  error.rs  lib.rs  node.rs
ndnm-backend/nodes/node-file-browser/: Cargo.toml
ndnm-backend/nodes/node-file-browser/managed_files/: integration_test_20251026231020.txt  integration_test_20251026231929.txt
ndnm-backend/nodes/node-file-browser/src/: main.rs
