[package]
name = "ndnm-hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
ndnm-libs = { path = "../ndnm-libs" }

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
walkdir = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Process management (for future use)
# tokio-process = "0.2"

[dev-dependencies]
tempfile = "3.15"
