[package]
name = "node-file-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
ndnm-libs = { path = "../../ndnm-libs" }

# Async
async-trait = "0.1"

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# File system
walkdir = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.15"
